--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=SSD1306 OLED Display Library
 version=1.0.0
 author=Saurav Sajeev
 maintainer=Saurav Sajeev
-sentence=Library to facilitate communication with the MX8650 mouse sensor, read/write from/to its internal registers.
+sentence=A graphics library for SSD1306 OLED Displays.
 paragraph=This library facilitates communication with the MX8650 mouse controller, allowing for reading and writing data to its internal registers. It is essential to refer to the MX8650 datasheet before transferring data to the sensor registers.
 category=Mouse/Mouse Controller
 url=https://github.com/styropyr0/MX8650
