updated library files

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,9 @@
-name=SSD1306 OLED Display Library
+name=SSD1306 OLED Display
 version=1.0.0
 author=Saurav Sajeev
-maintainer=Saurav Sajeev
-sentence=A graphics library for SSD1306 OLED Displays.
-paragraph=This library facilitates communication with the MX8650 mouse controller, allowing for reading and writing data to its internal registers. It is essential to refer to the MX8650 datasheet before transferring data to the sensor registers.
-category=Mouse/Mouse Controller
-url=https://github.com/styropyr0/MX8650
+maintainer=sauravsajeev202@gmail.com
+sentence=An easy-to-use library for controlling SSD1306 OLED displays with custom fonts, progress bars, and more.
+paragraph=This library supports controlling OLED displays using the SSD1306 driver. It provides support for custom fonts, animated text, progress bars, bitmap image rendering, and other display-related features. Compatible with 128x64 and 128x32 pixel OLED displays.
+category=Display
+url=https://github.com/your-repository-link-here
+architectures=arduino, ESP
