--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,4 @@ maintainer=sauravsajeev202@gmail.com
 sentence=An easy-to-use library for controlling SSD1306 OLED displays with custom fonts, progress bars, and more.
 paragraph=This library supports controlling OLED displays using the SSD1306 driver. It provides support for custom fonts, animated text, progress bars, bitmap image rendering, and other display-related features. Compatible with 128x64 and 128x32 pixel OLED displays.
 category=Display
-url=https://github.com/your-repository-link-here
-architectures=arduino, ESP
+url=https://github.com/styropyr0/oled.h
