--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=An easy-to-use library for controlling SSD1306 OLED displays with custo
 paragraph=This library supports controlling OLED displays using the SSD1306 driver. It provides support for custom fonts, animated text, progress bars, bitmap image rendering, and other display-related features. Compatible with 128x64 and 128x32 pixel OLED displays.
 category=Display
 architectures=*
-url=https://github.com/styropyr0/oled.h.git
+url=https://github.com/styropyr0/SSD1306
