--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=SSD1306 OLED Display
 version=1.0.4
 author=Saurav Sajeev
 maintainer=sauravsajeev202@gmail.com
-sentence=An easy-to-use library for controlling SSD1306 OLED displays with custom fonts, plots, progress bars, and more.
+sentence=An easy-to-use library for controlling SSD1306 OLED displays with custom fonts, graphs, plots, progress bars, and more.
 paragraph=This library supports controlling OLED displays using the SSD1306 driver. It provides support for custom fonts, animated text, progress bars, bitmap image rendering, and other display-related features. Compatible with 128x64 and 128x32 pixel OLED displays.
 category=Display
 architectures=*
